--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,7 @@
                     <form action="/login" method="post">
                         <div class="form-group">
                             <!-- <label> Email </label> -->
+                            {{ form.csrf_token }}
                             {{form.email(class_="form-control")}}
                             <!-- <input type="text" class="form-control" id="email" placeholder="Enter Email"> -->
                         </div>
