--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Yellow JackEats - Sign In</title>
+    <title>Yellow JackEats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,32 +11,25 @@
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="card login-card my-5">
                 <div class="card-body">
+                    <ul class="nav nav-tabs justify-content-center">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                    <br>
                     <h1 class="card-title text-center"> Yellow JackEats </h1>
                     <br>
-                    <form action="/login" method="post">
-                        <div class="form-group">
-                            {{ form.csrf_token }}
-                            {{form.email(class_="form-control")}}
-                        </div>
-                        <br>
-                        <div class="form-group">
-                            {{form.password(class_="form-control")}}
-                        </div>
-                        <br>
-                        <div class="d-flex justify-content-center">
-                            {{form.submit(class_="form-control btn-outline-dark")}}
-                        </div>
-                        <br>
-                    </form>
-                    <br>
-                    <div class="d-flex justify-content-center">
-                        <a href="/register" class="card-link">Create New Account</a>
+                    <div class="d-grid gap-4">
+                        <a href="/order" class="btn btn-outline-dark btn-lg">Order</a>
+                        <a href="/deliver" class="btn btn-outline-dark btn-lg">Deliver</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- JavaScript Imports -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
