--- a/templates/order.html
+++ b/templates/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Yellow JackEats</title>
+    <title>Yellow JackEats - Order</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,33 +9,76 @@
 <body>
     <div class="container d-flex justify-content-center">
         <div class="col-12 col-md-8 col-lg-7 col-xl-6">
-            <div class="card order-card my-5">
+            <div class="card login-card my-5">
                 <div class="card-body">
-                    <h1 class="card-title text-center"> Put a Checkbox Next to the Items That You Want to Order! </h1>
+                    <ul class="nav nav-tabs justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/order">Order</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Checkout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Details</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
                     <br>
-                    <form action='/checkout'; method="post">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown button
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
-                        <br>
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-block">Place Order</button>
-                        </div>
+                    <h1 class="card-title text-center"> Order Food! </h1>
+                    <br>
+
+                    <form action="/order" method="post" id="loc_form">
+                        <select name="loc" id="loc" class="form-select" aria-label="Default select example" onchange="this.form.submit()">
+                            <option selected>Select Dining Location</option>
+                            <option {%if loc == "brittain"  %} selected {%endif%} value="brittain">Brittain</option>
+                            <option {%if loc == "north-ave-dining"  %} selected {%endif%} value="north-ave-dining">North Ave</option>
+                            <option {%if loc == "west-village"  %} selected {%endif%} value="west-village">Willage</option>
+                            <option {%if loc == "blue-donkeye"  %} selected {%endif%} value="blue-donkeye">Blue Donkey</option>
+                            <option {%if loc == "chick-fil-a"  %} selected {%endif%} value="chick-fil-a">Chick Fil A</option>
+                            <option {%if loc == "wing-zone"  %} selected {%endif%} value="wing-zone">Wing Zone</option>
+                            <option {%if loc == "kaldis-coffee"  %} selected {%endif%} value="kaldis-coffee">Kaldis Coffee</option>
+                            <option {%if loc == "panda-express"  %} selected {%endif%} value="panda-express">Panda Express</option>
+                            <option {%if loc == "ramblin-coffee-sweets"  %} selected {%endif%} value="ramblin-coffee-sweets">Ramblin Coffee Sweets</option>
+                            <option {%if loc == "rising-roll"  %} selected {%endif%} value="rising-roll">Rising Roll</option>
+                            <option {%if loc == "the-dive"  %} selected {%endif%} value="the-dive">The Dive</option>
+                            <option {%if loc == "twisted-taco"  %} selected {%endif%} value="twisted-taco">Twisted Taco</option>
+                        </select>
                     </form>
-                </div>
+
+                    <br>
+
+                    {%if foods|length > 0 %}
+                        <form action="/order" method="post" id="food_form">
+                            <input type="hidden" name="loc" id="food_loc" value="{{loc}}">
+                            {%for food in foods%}
+                                <div class="form-check">
+                                    <input name="{{food}}" id="{{food}}" class="form-check-input" type="checkbox">
+                                    <label class="form-check-label" for="{{food}}">
+                                        {{food}}
+                                    </label>
+                                </div>
+                            {%endfor%}
+                            <br>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="btn btn-outline-dark btn-lg">Place Order</button>
+                            </div>
+                        </form>
+                    {%else%}
+                        <i>Select dining location to view food choices.</i>
+                    {%endif%}                        
+                </div>  
             </div>
         </div>
     </div>
-
-
+    
     <!-- JavaScript Imports -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html> 
