--- a/templates/order_details.html
+++ b/templates/order_details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Yellow JackEats - Checkout</title>
+    <title>Yellow JackEats - Order Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,22 +19,19 @@
                             <a class="nav-link" href="/order">Order</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/checkout">Checkout</a>
+                            <a class="nav-link" href="/checkout">Checkout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled">Details</a>
+                            <a class="nav-link active" href="/order_details">Details</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
                         </li>
                     </ul>
                     <br>
-                    <h1 class="card-title text-center"> Checkout! </h1>
-                    <form action="/checkout" method="post">
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-outline-dark btn-lg">Confirm Order</button>
-                        </div>
-                    </form>
+                    <h1 class="card-title text-center"> Thank you for placing an order! </h1>
+                    <br>
+                    <p class="card-title text-center">Here are your order and delivery details. We will notify you as soon as someone accepts the delivery. </p>
                     <br>                 
                 </div>  
             </div>
