--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Yellow JackEats</title>
+    <title>Yellow JackEats - Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,25 +17,24 @@
                     <br>
                     <form action="/register" method="post">
                         <div class="form-group">
-                            <!-- <label> Email </label> -->
                             {{ form.csrf_token }}
                             {{form.email(class_="form-control")}}
-                            <!-- <input type="text" class="form-control" id="email" placeholder="Enter Email"> -->
                         </div>
                         <br>
                         <div class="form-group">
                             {{form.name(class_="form-control")}}
                         </div>
                         <br>
+                        <div class="d-flex justify-content-center">
+                            {{form.phone(class_="form-control btn-outline-dark")}}
+                        </div>
+                        <br>
                         <div class="form-group">
-                            <!-- <label> Password </label> -->
                             {{form.password(class_="form-control")}}
-                            <!-- <input type="password" class="form-control" id="password" placeholder="Password"> -->
                         </div>
                         <br>
                         <div class="d-flex justify-content-center">
                             {{form.submit(class_="form-control btn-outline-dark")}}
-                            <!-- <button type="submit" class="btn btn-block">Submit</button> -->
                         </div>
                     </form>
                     <br>
