--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -19,28 +19,31 @@
                         <a class="nav-link" href="/deliver">Deliver</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/confirmation">Confirmation</a>
+                        <a class="nav-link active" href="/confirmation">Confirmation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/deliver_details">Details</a>
+                        <a class="nav-link disabled">Details</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
-                    </ul>
-                    <br>
-                    <h1 class="card-title text-center"> Thank you for accepting an order! </h1>
-                    <br>
-                    <p class="card-title text-center">Here are your order and delivery details. We will notify the recipient. </p>
-                    <br>                 
-                </div>  
+                  </ul>
+                  <br>
+                  <h1 class="card-title text-center"> Deliver Food! </h1>
+                  <br>
+                <form action="/deliver_details" method="post">
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-outline-dark btn-lg">Confirm Delivery</button>
+                    </div>
+                </form>
+                <br>                 
+                </div>
             </div>
         </div>
     </div>
-    
-    <!-- JavaScript Imports -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+
+    <!-- JavaScript Imports -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html> 
