--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Yellow JackEats - Deliver</title>
@@ -16,22 +16,33 @@
                         <a class="nav-link" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/deliver">Deliver</a>
+                        <a class="nav-link" href="/deliver">1. Deliver</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/confirmation">Confirmation</a>
+                        <a class="nav-link active" href="/confirmation">2. Confirmation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">Details</a>
+                        <a class="nav-link disabled">3. Details</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
                   </ul>
                   <br>
-                  <h1 class="card-title text-center"> Deliver Food! </h1>
+                  <h1 class="card-title text-center"> Here are the order details! </h1>
                   <br>
+                    <div class="card order-card">
+                        <div class="card-body">
+                            <h4 class="card-title text-center"> <b> {{order.name}}'s order </b> </h4>
+                            <h4 class="card-title text-center"> {{order.from_loc}} -> {{order.to_loc}} </h4>
+                            <br>
+                            <p class="order-card-text text-center"> <b> Food List: </b> {%for i in range(order.food|length-1)%} {{order.food[i]}}, {%endfor%} {{order.food[order.food|length-1]}} </p>
+                            <p class="order-card-text text-center"> <b> Total Payment: </b> {{order.payment}} </p>
+                        </div>
+                    </div>
+                <br>
                 <form action="/deliver_details" method="post">
+                    <input type="hidden" name="email" id="email" value="{{order.email}}">
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-outline-dark btn-lg">Confirm Delivery</button>
                     </div>
