--- a/templates/deliver_details.html
+++ b/templates/deliver_details.html
@@ -16,13 +16,13 @@
                         <a class="nav-link" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/deliver">Deliver</a>
+                        <a class="nav-link" href="/deliver">1. Deliver</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/confirmation">Confirmation</a>
+                        <a class="nav-link" href="/confirmation">2. Confirmation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/deliver_details">Details</a>
+                        <a class="nav-link active" href="/deliver_details">3. Details</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
@@ -32,7 +32,19 @@
                     <h1 class="card-title text-center"> Thank you for accepting an order! </h1>
                     <br>
                     <p class="card-title text-center">Here are your order and delivery details. We will notify the recipient. </p>
-                    <br>                 
+                    <br>
+                    <div class="card order-card">
+                        <div class="card-body">
+                            <h4 class="card-title text-center"> <b> {{order.name}}'s order </b> </h4>
+                            <h4 class="card-title text-center"> {{order.from_loc}} -> {{order.to_loc}} </h4>
+                            <br>
+                            <p class="order-card-text text-center"> <b> Recipient's Phone: </b> {{order.phone_number}} </p>
+                            <p class="order-card-text text-center"> <b> Recipient's Email: </b> {{order.email}} </p>
+                            <br>
+                            <p class="order-card-text text-center"> <b> Food List: </b> {%for i in range(order.food|length-1)%} {{order.food[i]}}, {%endfor%} {{order.food[order.food|length-1]}} </p>
+                            <p class="order-card-text text-center"> <b> Total Payment: </b> {{order.payment}} </p>
+                        </div>
+                    </div> 
                 </div>  
             </div>
         </div>
