--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ title }}</title>
+  <link rel="icon" href="{{ url_for('static',filename='images/logo.ico') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
